@@ -1,4 +1,4 @@
-/* $Id: config.c,v 1.6.2.1 2003-05-17 04:48:50 btb Exp $ */
+/* $Id: config.c,v 1.6.2.2 2003-05-17 10:31:44 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -141,7 +141,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 
 
 #ifdef RCS
-static char rcsid[] = "$Id: config.c,v 1.6.2.1 2003-05-17 04:48:50 btb Exp $";
+static char rcsid[] = "$Id: config.c,v 1.6.2.2 2003-05-17 10:31:44 btb Exp $";
 #endif
 
 ubyte Config_digi_volume = 8;
@@ -278,7 +278,7 @@ void CheckMovieAttributes()
 
 int ReadConfigFile()
 {
-	FILE *infile;
+	PHYSFS_file *infile;
 	char line[80], *token, *value, *ptr;
 	ubyte gamma;
 	int joy_axis_min[7];
@@ -319,14 +319,14 @@ int ReadConfigFile()
 	SaveMovieHires = MovieHires;
 	save_redbook_enabled = Redbook_enabled;
 
-	infile = fopen("descent.cfg", "rt");
+	infile = PHYSFS_openRead("descent.cfg");
 	if (infile == NULL) {
 		WIN(CheckMovieAttributes());
 		return 1;
 	}
-	while (!feof(infile)) {
+	while (!PHYSFS_eof(infile)) {
 		memset(line, 0, 80);
-		fgets(line, 80, infile);
+		PHYSFSX_gets(infile, line);
 		ptr = &(line[0]);
 		while (isspace(*ptr))
 			ptr++;
@@ -421,7 +421,7 @@ int ReadConfigFile()
 		}
 	}
 
-	fclose(infile);
+	PHYSFS_close(infile);
 
 #ifdef WINDOWS
 	for (i=0;i<4;i++)
@@ -494,11 +494,11 @@ int ReadConfigFile()
 	} else
 		digi_driver_board		= digi_driver_board;
 #else
-	infile = fopen("descentw.cfg", "rt");
+	infile = PHYSFS_openRead("descentw.cfg");
 	if (infile) {
-		while (!feof(infile)) {
+		while (!PHYSFS_eof(infile)) {
 			memset(line, 0, 80);
-			fgets(line, 80, infile);
+			PHYSFSX_gets(infile, line);
 			ptr = &(line[0]);
 			while (isspace(*ptr))
 				ptr++;
@@ -518,7 +518,7 @@ int ReadConfigFile()
 				}
 			}
 		}
-		fclose(infile);
+		PHYSFS_close(infile);
 	}
 #endif
 
@@ -550,59 +550,59 @@ int WriteConfigFile()
 		return 1;
 	}
 	/*sprintf (str, "%s=0x%x\n", digi_dev8_str, Config_digi_type);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=0x%x\n", digi_dev16_str, digi_driver_board_16);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=0x%x\n", digi_port_str, digi_driver_port);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d\n", digi_irq_str, digi_driver_irq);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d\n", digi_dma8_str, Config_digi_dma);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d\n", digi_dma16_str, digi_driver_dma_16);
-	PHYSFSX_writeString(infile, str);*/
+	PHYSFSX_puts(infile, str);*/
 	sprintf (str, "%s=%d\n", digi_volume_str, Config_digi_volume);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	/*sprintf (str, "%s=0x%x\n", midi_dev_str, Config_midi_type);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=0x%x\n", midi_port_str, digi_midi_port);
-	PHYSFSX_writeString(infile, str);*/
+	PHYSFSX_puts(infile, str);*/
 	sprintf (str, "%s=%d\n", midi_volume_str, Config_midi_volume);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d\n", redbook_enabled_str, FindArg("-noredbook")?save_redbook_enabled:Redbook_enabled);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d\n", redbook_volume_str, Config_redbook_volume);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d\n", stereo_rev_str, Config_channels_reversed);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d\n", gamma_level_str, gamma);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	if (Detail_level == NUM_DETAIL_LEVELS-1)
 		sprintf (str, "%s=%d,%d,%d,%d,%d,%d,%d\n", detail_level_str, Detail_level,
 				Object_complexity,Object_detail,Wall_detail,Wall_render_depth,Debris_amount,SoundChannels);
 	else
 		sprintf (str, "%s=%d\n", detail_level_str, Detail_level);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 
 	sprintf (str, "%s=%d,%d,%d,%d\n", joystick_min_str, joy_axis_min[0], joy_axis_min[1], joy_axis_min[2], joy_axis_min[3] );
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d,%d,%d,%d\n", joystick_cen_str, joy_axis_center[0], joy_axis_center[1], joy_axis_center[2], joy_axis_center[3] );
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d,%d,%d,%d\n", joystick_max_str, joy_axis_max[0], joy_axis_max[1], joy_axis_max[2], joy_axis_max[3] );
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 
 	sprintf (str, "%s=%s\n", last_player_str, Players[Player_num].callsign );
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%s\n", last_mission_str, config_last_mission );
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d\n", config_vr_type_str, Config_vr_type );
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d\n", config_vr_resolution_str, Config_vr_resolution );
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d\n", config_vr_tracking_str, Config_vr_tracking );
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 	sprintf (str, "%s=%d\n", movie_hires_str, (FindArg("-nohires") || FindArg("-nohighres") || FindArg("-lowresmovies"))?SaveMovieHires:MovieHires);
-	PHYSFSX_writeString(infile, str);
+	PHYSFSX_puts(infile, str);
 
 	PHYSFS_close(infile);
 
@@ -671,7 +671,7 @@ int WriteConfigFile()
 #endif
 
 #ifdef RCS
-static char rcsid[] = "$Id: config.c,v 1.6.2.1 2003-05-17 04:48:50 btb Exp $";
+static char rcsid[] = "$Id: config.c,v 1.6.2.2 2003-05-17 10:31:44 btb Exp $";
 #endif
 
 #define MAX_CTB_LEN	512
